kubernetes/apps/questify/questify-app/app/otel-patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: questify-java
    spec:
      containers:
        - name: auth-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quest-service
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: questify-java
    spec:
      containers:
        - name: quest-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: questify-java
    spec:
      containers:
        - name: project-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progression-service
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: questify-java
    spec:
      containers:
        - name: progression-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: questify-java
    spec:
      containers:
        - name: stats-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: questify-java
    spec:
      containers:
        - name: admin-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: questify-java
    spec:
      containers:
        - name: notification-service
